=== CHANGELOG ===

v0.0.3alpha (unreleased)

  * === Now works on Linux (rolled back some libraries for maximum compatibility).
  * === Now works on OS X (rolled back some libraries for maximum compatibility).

  * Overwrites the same log file each time it is run (before it created one for every run).
  * Instructions page, telling you how to play.
  * Audio settings in options.
  * Controls (keys/gamepad) settings in options.
  * Throwing items now makes them travel a lot further (Except throwing animals, which generally is less far now).
  * Creatures can be knocked down if hit with a sufficiently large thrown object.
  * Added a disaster to the forest/dryad level (trees awaken) and island level (firey rocks).
  * Replaced game text overlay with a graphical overlay.
  * Made level-dependent gods and anger meter, which triggers disasters. Sacrifice reduces anger.
  * Added buttons to replay the game or return to the main menu when game ends.
  * FIXED: Ready indicators are left on when leaving a game.
  * FIXED: Sacrifice of the forest virgin crashes the game.
  * FIXED: Player objects skid around the screen when the game ends.

v0.0.2alpha (2011-05-10)

  * First public release.